--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@twa-dev/sdk": "^7.0.0",
     "iron-session": "^8.0.2",
     "next": "14.2.4",
     "react": "^18",
