--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "iron-session": "^8.0.2",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tooltip": "^5.27.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
