--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-tooltip": "^5.27.0"
+    "react-tooltip": "^5.27.0",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
