--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/telegram-web-app": "^7.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "sass": "^1.77.6",
