--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-tooltip": "^5.27.0",
+    "reactjs-popup": "^2.0.6",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
