--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
-    "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+   "dev": "nodemon",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "cross-env NODE_ENV=production node dist/server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@firebase/firestore": "^4.6.4",
+    "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "firebase": "^10.12.3",
     "iron-session": "^8.0.2",
@@ -28,6 +29,7 @@
     "@types/telegram-web-app": "^7.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "nodemon": "^3.1.4",
     "sass": "^1.77.6",
     "typescript": "^5"
   }
