--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-   "dev": "nodemon",
+    "dev": "nodemon",
     "build": "next build && tsc --project tsconfig.server.json",
     "start": "cross-env NODE_ENV=production node dist/server.js",
     "lint": "next lint"
@@ -15,6 +15,7 @@
     "firebase": "^10.12.3",
     "iron-session": "^8.0.2",
     "next": "14.2.4",
+    "node-cron": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-tooltip": "^5.27.0",
