--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon",
-    "build": "next build && tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production node dist/server.js",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -30,7 +30,6 @@
     "@types/telegram-web-app": "^7.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "nodemon": "^3.1.4",
     "sass": "^1.77.6",
     "typescript": "^5"
   }
