--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18",
     "react-tooltip": "^5.27.0",
     "reactjs-popup": "^2.0.6",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
