--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@firebase/firestore": "^4.6.4",
+    "canvas-confetti": "^1.9.3",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "firebase": "^10.12.3",
@@ -24,6 +25,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
