--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   "dependencies": {
     "@firebase/firestore": "^4.6.4",
     "canvas-confetti": "^1.9.3",
-    "cron": "^3.1.7",
+    "cron-parser": "^4.9.0",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "firebase": "^10.12.3",
     "iron-session": "^8.0.2",
     "next": "14.2.4",
-    "node-cron": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-tooltip": "^5.27.0",
