--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-tooltip": "^5.27.0",
     "reactjs-popup": "^2.0.6",
     "telegraf": "^4.16.3",
+    "use-sound": "^4.0.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
